2008-01-11  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.[ch]:
	* src/sj-extracting.c:
	Add a Year entry to the main window (#325264, thanks Andrzej Polatyński)

2008-01-11  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Open and re-save in Glade3.

2008-01-08  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Update Duplicate logic, so it checks for cdrdao and a writer
	(thanks Dave Meikle).

2008-01-06  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix Duplicate Disc logic on startup (#361122, thanks Dave Meikle).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.[ch]:
	Add a Duplicate Disc menu item, which calls nautilus-cd-burner.
	(#361122, thanks Dave Meikle).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Show a better error message if we can't create the target
	directories (#354208, thanks MatzeB).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Remove Sound Juicer from the desktop file (#336727).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Pause the pipeline when switching track, so the first playback
	seeks to the correct track. (#507166, thank Bill O'Shea).

2008-01-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-extracting.c:
	Hide the progress bar unless ripping (#441297, thanks Ghee Teo)

2008-01-05  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Remove always-true test.

2008-01-05  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	* src/sj-extracting.c:
	As tracks are played or ripped, scroll the treeview to keep them
	in view. (#430780, thanks Dave Meikle).

2008-01-02  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When changing album artist, only change track artists if they
	haven't been already changed (#122367, thanks Bill O'Shea).

2008-01-01  Ross Burton  <ross@burtonini.com>
