@@ -1,5 +1,10 @@
 2008-01-11  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Check that filenames are not too long (#172781, thanks Ed Catmur).
+
+2008-01-11  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	* src/sj-main.[ch]:
 	* src/sj-extracting.c:
